--- a/VerokeTask06Sep/main.css
+++ b/VerokeTask06Sep/main.css
@@ -132,4 +132,8 @@
         width: 100%;
         padding-left: 0px;
     }
+    #right-Side-Section-MainContain{
+       display: flex;
+       flex-direction:column;
+    }
 }
