--- a/angular/src/app/route-one/route-one.component.html
+++ b/angular/src/app/route-one/route-one.component.html
@@ -1,8 +1,8 @@
 <main class="main">
     <p>route-one works!</p>
     <div class="inputFeild">
-        <input placeholder="Enter Name" id="name">
-        <input placeholder="Enter Rank" id="rank">
+        <input placeholder="Enter Name" [(ngModel)]="name" id="name">
+        <input placeholder="Enter Rank" [(ngModel)]="rank" id="rank">
         <button (click)="submit()" class="Button">Submit</button>
     </div>
 </main>
@@ -12,3 +12,13 @@
 </div>
 
 
+
+<!-- <form class="mainCard"  [formGroup]="registerationForm" (ngSubmit)="onSubmit()">
+
+    <h1>Compnent One</h1>
+    <p>Enter Data to send Parent</p>
+    <input placeholder="Enter Heading" formControlName="Heading" class="input">
+    <input placeholder="Enter Text" formControlName="text" class="input">
+    <button class="submit" type="submit" (click)="updateDataEvent.emit(registerationForm.value)" >Send To Parent</button>
+
+</form> -->
