--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
 }
 .inputFeild{
     display: flex;
@@ -12,7 +13,7 @@
     flex-direction: column;
     gap: 10px;
 }
-.Button{
+.submit{
     background-color: royalblue;
     padding: 10px;
     font-weight: bold;
@@ -20,4 +21,23 @@
     border-radius: 10px;
     border: none;
     cursor: pointer;
+}
+.mainCard{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    box-shadow: 1px 1px 5px 2px lightblue; 
+    padding: 10px;
+    border-radius: 10px;
+    width: 50%;
+    align-self: center;
+    justify-self: center;
+    margin-left: 25%;
+    color: royalblue;
+}
+.outPut{
+    color: royalblue;
 }
