Data sent to child with route

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -8,7 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <div class="mainDiv">
   <header>
-    <h3>MSI</h3>
+    <h3>MSI Angular</h3>
   </header>
   <nav class="nav">
     <a routerLink="/ChildOne" routerLinkActive="active" class="link">Child One</a>
