send data using card

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -24,12 +24,12 @@
 
 
 <!-- <p> {{ outputMessage | json}}</p> -->
-<router-outlet (activate)="onActivate($event)" />
+<!-- <router-outlet (activate)="onActivate($event)" /> -->
+<router-outlet />
 
-
-<span class="outPut">
+<!-- <span class="outPut">
   <strong>Data From Childs</strong>
   <div *ngFor="let item of outputMessage">
     <p><strong>The Heading is: </strong>{{ item.heading}} <strong> <br />The Text is: </strong>{{item.text}}</p>
   </div>
-</span>
+</span> -->
