--- a/angular/src/app/child-three/child-three.component.html
+++ b/angular/src/app/child-three/child-three.component.html
@@ -1,4 +1,4 @@
-<div class="mainCard">
+<!-- <div class="mainCard">
     <h1>Compnent Three</h1>
     <p>Enter Data to send Parent</p>
     <small>Heading is: {{ heading }}</small>
@@ -6,4 +6,14 @@
     <input placeholder="Enter Heading" [(ngModel)]="heading" class="input">
     <input placeholder="Enter Text" [(ngModel)]="text" class="input">
     <button class="submit" type="submit" (click)="onButtonClick()">Send To Parent</button>
-</div>
+</div> -->
+
+<app-card  (buttonClick)="onActivate($event)" [getData]="sendData"></app-card>
+
+
+<span class="outPut">  
+    <strong>Data From Cards</strong>
+    <div *ngFor="let item of outputMessage">
+      <p><strong>The Heading is: </strong>{{ item.heading}} <strong> <br />The Text is: </strong>{{item.text}}</p>
+    </div>
+</span>
