--- a/FormTable/form-table/src/styles.css
+++ b/FormTable/form-table/src/styles.css
@@ -1,1 +1,38 @@
-/* You can add global styles to this file, and also import other style files */
+.mainForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    color: royalblue;
+}
+.Form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    color: royalblue;
+}
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: royalblue;
+    color: white;
+    font-weight: bold;
+    border: transparent;
+    border-radius: 4px;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    cursor: pointer;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    gap: 10px;
+    box-shadow: 1px 1px 5px 2px rgb(61, 65, 66); 
+}
+.link{
+    text-decoration: none;
+}
