--- a/FormTable/form-table/src/app/table/table.component.html
+++ b/FormTable/form-table/src/app/table/table.component.html
@@ -1,31 +1,39 @@
-<a routerLink="forms" routerLinkActive="active" class="link"><button class="button">ADD Detail</button></a>
+<main class="mainForm ">
+    <a routerLink="forms" routerLinkActive="active" class="link"><button mat-flat-button class="button">ADD
+            Detail</button></a>
 
+    <table mat-header-cell class="mat-elevation-z8 demo-table">
+        <thead>
+            <tr mat-header-cell>
+                <th class="tableData" *ngFor="let header of TableHeading">{{ header.lable}}</th>
+            </tr>
+        </thead>
+        <tbody mat-cell>
+            <tr  *ngFor="let row of DataFromLoacalStore;">
+                <td class="tableData" *ngFor="let c of TableHeading">
 
-<table border="2">
-    <thead>
-        <tr>
-            <th *ngFor="let header of TableHeading">{{ header.lable}}</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let row of DataFromLoacalStore;">
-            <td *ngFor="let c of TableHeading">
-
-                @if(c.key!='actions'){
+                    @if(c.key!='actions'){
                     @if(c.key=='street' || c.key=='city'){
-                        {{row.address[c.key]}}
+                    {{row.address[c.key]}}
                     }
-                {{row[c.key]}}
-                }@else {
-                @for (c of actions; track $index) {
-                <button [routerLink]="RouterLink(actions[$index])" (click)="call(row.id,actions[$index])">
-                    {{c}}
-                </button>
-                }
-                }
-            </td>
-        </tr>
-    </tbody>
-</table>
+                    {{row[c.key]}}
+                    }@else {
+                    @for (c of actions; track $index) {
+                    <button mat-raised-button [routerLink]="RouterLink(actions[$index])"
+                        (click)="call(row.id,actions[$index])">
+                        {{c}}
+                    </button>
+                    }
+                    }
+                </td>
+            </tr>
+        </tbody>
+    </table>
 
-<button class="button" (click)="remove()">Delete Record</button>
+
+
+
+
+    <button mat-flat-button class="button" (click)="remove()">Delete Record</button>
+
+</main>
