--- a/FormTable/form-table/src/styles.css
+++ b/FormTable/form-table/src/styles.css
@@ -11,15 +11,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 1rem;
     color: royalblue;
 }
 .button{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: royalblue;
-    color: white;
+    /* background-color: royalblue; */
+    /* color: white; */
     font-weight: bold;
     border: transparent;
     border-radius: 4px;
@@ -31,8 +30,14 @@
     margin-bottom: 10px;
     margin-top: 10px;
     gap: 10px;
-    box-shadow: 1px 1px 5px 2px rgb(61, 65, 66); 
+    /* box-shadow: 1px 1px 5px 2px rgb(61, 65, 66);  */
 }
 .link{
     text-decoration: none;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.tableData{
+    padding-left: 10px;
+    /* text-align: center;     */
 }
