--- a/FormTable/form-table/src/app/form/form.component.html
+++ b/FormTable/form-table/src/app/form/form.component.html
@@ -26,8 +26,9 @@
         <button mat-flat-button *ngIf="updateButton" (click)="update()"> update</button>
         <button mat-flat-button *ngIf="clearButton" (click)="clear()"> Clear</button>
     </form>
+   
     <a routerLink="" routerLinkActive="active" class="link">
-        <button mat-flat-button>
+        <button mat-flat-button class="button"> 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-box-arrow-left" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
@@ -39,5 +40,10 @@
         </button> 
     </a>
     
-
+   
 </main>
+
+<!-- <dialog-overview-example></dialog-overview-example> -->
+
+
+
