--- a/FormTable/form-table/src/styles.css
+++ b/FormTable/form-table/src/styles.css
@@ -17,20 +17,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: royalblue; */
-    /* color: white; */
-    font-weight: bold;
-    border: transparent;
-    border-radius: 4px;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    padding-top: 8px;
-    padding-bottom: 8px;
     cursor: pointer;
     margin-bottom: 10px;
     margin-top: 10px;
-    gap: 10px;
-    /* box-shadow: 1px 1px 5px 2px rgb(61, 65, 66);  */
 }
 .link{
     text-decoration: none;
@@ -39,5 +28,6 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .tableData{
     padding-left: 10px;
-    /* text-align: center;     */
+    text-align: center;    
 }
+
