--- a/FormTable/form-table/src/app/table/table.component.html
+++ b/FormTable/form-table/src/app/table/table.component.html
@@ -1,17 +1,17 @@
 <main class="mainForm ">
-    <a routerLink="forms" routerLinkActive="active" class="link"><button mat-flat-button class="button">ADD
-            Detail</button></a>
+    <dialog-overview-example></dialog-overview-example>
+    <!-- <a routerLink="forms" routerLinkActive="active" class="link"><button mat-flat-button class="button">ADD
+            Detail</button></a> -->
 
     <table mat-header-cell class="mat-elevation-z8 demo-table">
         <thead>
-            <tr mat-header-cell>
+            <tr  mat-header-cell>
                 <th class="tableData" *ngFor="let header of TableHeading">{{ header.lable}}</th>
             </tr>
         </thead>
         <tbody mat-cell>
             <tr  *ngFor="let row of DataFromLoacalStore;">
                 <td class="tableData" *ngFor="let c of TableHeading">
-
                     @if(c.key!='actions'){
                     @if(c.key=='street' || c.key=='city'){
                     {{row.address[c.key]}}
@@ -19,7 +19,8 @@
                     {{row[c.key]}}
                     }@else {
                     @for (c of actions; track $index) {
-                    <button mat-raised-button [routerLink]="RouterLink(actions[$index])"
+                    <button mat-raised-button 
+                    [routerLink]="RouterLink(actions[$index])"
                         (click)="call(row.id,actions[$index])">
                         {{c}}
                     </button>
@@ -28,12 +29,14 @@
                 </td>
             </tr>
         </tbody>
+
+        <tr mat-header-row ></tr>
+        <tr mat-row></tr>
     </table>
-
-
-
 
 
     <button mat-flat-button class="button" (click)="remove()">Delete Record</button>
 
 </main>
+
+
