--- a/FormTable/form-table/src/app/app.component.html
+++ b/FormTable/form-table/src/app/app.component.html
@@ -1,3 +1,34 @@
+<div class="topBar">
+    <p>NavBar</p>
+</div>
+<div class="example-button-container">
+<button mat-mini-fab aria-label="Example icon button with a menu icon" (click)="toggleDisplay()">
+    <mat-icon>menu</mat-icon>
+</button>
+</div>
+
+<main class="mainContainer">
+    <div class="leftSide" *ngIf="isVisible" [@slideToggleAnimation] >
+        <nav class="nav" *ngIf="isVisible" [@slideToggleAnimation]>
+            <!-- <a routerLink="" routerLinkActive="active" class="link">
+                <button mat-stroked-button class="button">Home</button>
+            </a> -->
+            <a routerLink="/forms/add/new" routerLinkActive="active" class="link">
+                <button mat-stroked-button class="button">Forms</button>
+            </a>
+            <a routerLink="/table" routerLinkActive="active" class="link">
+                <button mat-stroked-button class="button">Show Table</button>
+            </a>
+        </nav>
+    </div>
+
+    <div class="rightSide">
+        <router-outlet />
+    </div>
+
+   
+
+</main>
 
 
-<router-outlet />
+
