--- a/TailwindINAngular/src/app/home-page/home-page.component.html
+++ b/TailwindINAngular/src/app/home-page/home-page.component.html
@@ -24,9 +24,10 @@
 
 </table>
 
+<button (click)="LogOut()" class="bg-blue-600 text-white p-2 rounded ml-4 mt-4">Log Out </button>
 
-<!-- <app-tableadmin *ngIf="showAdmin"></app-tableadmin>
-<app-tableuser *ngIf="showUser" > </app-tableuser> -->
+
+
 
 
 
