--- a/TailwindINAngular/src/app/login/login.component.css
+++ b/TailwindINAngular/src/app/login/login.component.css
@@ -43,7 +43,11 @@
     }
 
     .custom-class-Ls {
-        display: none;
+        /* display: none; */
+        display: flex;
+        justify-content: center;
+        height: 50%;
+        width: 100%;
     }
 
     .custom-class-Rs {
