--- a/TailwindINAngular/src/app/home-page/home-page.component.html
+++ b/TailwindINAngular/src/app/home-page/home-page.component.html
@@ -4,33 +4,49 @@
   <p>End</p>
 </h1>
 
+<button class="menuButton" mat-mini-fab aria-label="Example icon button with a menu icon" (click)="toggleDisplay()">
+  <mat-icon>menu</mat-icon>
+</button>
 
-<button (click)="RendertableAdmin()" class="bg-blue-600 text-white p-2 rounded ml-4">Admin Records </button>
-<button (click)="RendertableUser()" class="bg-blue-600 text-white p-2 rounded ml-4">User Records </button>
+<main class="main">
 
+  <div *ngIf="isVisible" class="leftSide" [@slideToggleAnimation]>
+    <nav *ngIf="isVisible" [@slideToggleAnimation]  class="nav">
+      <button (click)="allRecords()" class="bg-blue-600 text-white p-2 rounded ">All Records </button>
+      <button (click)="RendertableAdmin()" class="bg-blue-600 text-white p-2 rounded ">Admin Records </button>
+      <button (click)="RendertableUser()" class="bg-blue-600 text-white p-2 rounded ">User Records </button>
+      <button (click)="LogOut()" class="bg-blue-600 text-white p-2 rounded ">Log Out </button>
+      <button (click)="signUp()" class="bg-blue-600 text-white p-2 rounded ">Add New Records </button>
+      <button (click)="clear()" class="bg-blue-600 text-white p-2 rounded ">clear Records </button>
+    </nav>
+  </div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-1/2" >
-  @for(c of TableHeading; track $index){
+  <div class="rightSide">
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-1/2">
+      @for(c of TableHeading; track $index){
       @if(c!='actions'){
       <ng-container matColumnDef={{c}}>
-          <th mat-header-cell *matHeaderCellDef> {{c| uppercase}} </th>
-          <td mat-cell *matCellDef="let element"> {{element[c]}} </td>
+        <th mat-header-cell *matHeaderCellDef> {{c| uppercase}} </th>
+        <td mat-cell *matCellDef="let element"> {{element[c]}} </td>
       </ng-container>
       }
-       
-  }
-  <tr mat-header-row *matHeaderRowDef="TableHeading"></tr>
-  <tr mat-row *matRowDef="let row; columns: TableHeading"></tr>
 
-</table>
+      }
+      <tr mat-header-row *matHeaderRowDef="TableHeading"></tr>
+      <tr mat-row *matRowDef="let row; columns: TableHeading"></tr>
 
-<button (click)="LogOut()" class="bg-blue-600 text-white p-2 rounded ml-4 mt-4">Log Out </button>
+    </table>
 
+  </div>
 
-
-
+</main>
 
 
 
 
-<ng-template #formTemplate></ng-template>
+
+
+
+
+<!-- <ng-template #formTemplate></ng-template> -->
