--- a/TailwindINAngular/src/app/sign-up/sign-up.component.html
+++ b/TailwindINAngular/src/app/sign-up/sign-up.component.html
@@ -4,7 +4,7 @@
         class="mainContainer h-full flex flex-row max-md:flex-col w-full justify-self-center self-center mx-2 my-2 justify-between border-2 rounded shadow-md bg-white rounded-tl-lg rounded-bl-lg custom-class-main-1">
 
         <div
-            class="LeftSide bGColor rounded-tl-lg custom-class-Ls rounded-bl-lg w-1/3 flex justify-center flex-col ms:hide ">
+            class=" bGColor rounded-tl-lg custom-class-Ls rounded-bl-lg w-1/3 flex justify-center flex-col ms:hide ">
             <h1 class="font-bold text-white flex justify-center text-center my-4">
                 WelCome Back!
             </h1>
@@ -29,6 +29,9 @@
                 <mat-error
                     *ngIf="registerationForm.get('name')?.hasError('required') && registerationForm.get('name')?.touched">Name
                     is Required</mat-error>
+                    <mat-error
+                    *ngIf="registerationForm.get('name')?.hasError('pattern') && registerationForm.get('name')?.touched">Name
+                    contain only Alfabets</mat-error>
                 <button mat-icon-button matSuffix class="mr-4">
                     <mat-icon>personal</mat-icon>
                 </button>
@@ -42,17 +45,13 @@
                     is Required
                 </mat-error>
                 <mat-error
-                *ngIf="registerationForm.get('email')?.hasError('email') && registerationForm.get('email')?.touched">Enter
-                Valid Email
+                    *ngIf="registerationForm.get('email')?.hasError('email') && registerationForm.get('email')?.touched">Enter
+                    Valid Email
                 </mat-error>
                 <button mat-icon-button matSuffix class="mr-4">
                     <mat-icon>email</mat-icon>
                 </button>
             </mat-form-field>
-
-            <small *ngIf="Match" class="text-red-600">
-                Password & confirmPassword Should Be Same
-           </small>
 
             <mat-form-field>
                 <mat-label>Enter your Password</mat-label>
@@ -61,19 +60,20 @@
                 <mat-error
                     *ngIf="registerationForm.get('password')?.hasError('required') && registerationForm.get('password')?.touched">Please
                     Enter Password</mat-error>
-                    <mat-error
+                <mat-error
                     *ngIf="registerationForm.get('password')?.hasError('minlength') && registerationForm.get('password')?.touched">Please
                     Enter strong Password</mat-error>
-                   
+                    
+                    <small *ngIf="Match" class="text-red-600">
+                        Password & confirmPassword Should Be Same
+                    </small>
                 <button class="mr-4" mat-icon-button matSuffix (click)="clickEvent()"
                     [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
             </mat-form-field>
-            <small *ngIf="Match" class="text-red-600">
-                Password & confirmPassword Should Be Same
-           </small>
 
+          
             <mat-form-field>
                 <mat-label>Confirm Password</mat-label>
                 <input matInput formControlName="confirmPassword" [type]="hide ? 'password' : 'text'"
@@ -81,19 +81,20 @@
                 <mat-error
                     *ngIf="registerationForm.get('confirmPassword')?.hasError('required') && registerationForm.get('confirmPassword')?.touched">Confirm
                     Password Please</mat-error>
-                    <mat-error
+                <mat-error
                     *ngIf="registerationForm.get('confirmPassword')?.hasError('minlength') && registerationForm.get('password')?.touched">Please
                     Enter strong Password</mat-error>
-                    <mat-error
-                    *ngIf="Match"> Password & confirmPassword Should Be Same
-                </mat-error>
+        
+                <small *ngIf="Match" class="text-red-600">
+                    Password & confirmPassword Should Be Same
+                </small>
                 <button class="mr-4" mat-icon-button matSuffix (click)="clickEvent()"
                     [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
             </mat-form-field>
 
-           
+
 
             <mat-form-field appearance="fill">
                 <mat-label>Enter Phone No</mat-label>
@@ -106,16 +107,19 @@
                 </button>
             </mat-form-field>
 
-            <small *ngIf="roleshow" class="text-red-600">
-                Role Should Be Admin or Users
-           </small>
 
+           
             <mat-form-field appearance="fill">
                 <mat-label>Enter Your Role</mat-label>
                 <input matInput formControlName="role" type="text" placeholder="Admin / User">
                 <mat-error
                     *ngIf="registerationForm.get('role')?.hasError('required') && registerationForm.get('role')?.touched">
-                    Mention Your Role</mat-error>
+                    Mention Your Role
+                </mat-error>               
+                <small *ngIf="roleshow" class="text-red-600">
+                    Role Should Be Admin or Users
+                </small>
+                
             </mat-form-field>
 
             <!-- <form [formGroup]="radioForm">
