--- a/TailwindINAngular/src/app/home-page/home-page.component.css
+++ b/TailwindINAngular/src/app/home-page/home-page.component.css
@@ -1,3 +1,10 @@
+.dailog{
+    display: flex;
+    width: 100%;
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
 .main{
     display: flex;
     justify-content: center;
